--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-	<title>SCS Coding Challenge #48</title>
+	<head>
+		<title>SCS Coding Challenge #48</title>
+	</head>
 	<body>
 		<h1 id="currentTime"></h1>
 		<div id="hue"></div>
